--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backoffice-integration",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Commercetools frontend backoffice integration",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,6 +32,8 @@
   "devDependencies": {
     "@commercetools/frontend-sdk": "^1.9.1",
     "@frontastic/extension-types": "^0.0.12",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@types/cookie": "^0.6.0",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
@@ -46,12 +48,10 @@
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   },
-  "dependencies": {
-    "@headlessui/react": "1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "react": "^18.2.0"
-  },
   "peerDependencies": {
-    "next": ">=13.4.5"
+    "@heroicons/react": ">2.0.13",
+    "@headlessui/react": ">1.7.17",
+    "next": ">=13.4.5",
+    "react": ">=18.2.0"
   }
 }
