--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "declarationMap": true,
     "declarationDir": "./dist/types",
     "emitDeclarationOnly": false,
     "outDir": "./dist",
